--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "student-frontend",
+  "name": "course-credit-tracker",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve:ssr:CourseCreditTracker": "node dist/CourseCreditTracker/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -22,26 +23,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-browser-dynamic": "^20.3.0",
+    "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "emailjs-com": "^3.2.0",
+    "@angular/ssr": "^20.3.7",
+    "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "xlsx": "^0.18.5",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.5",
-    "@angular/cli": "^20.3.5",
+    "@angular/build": "^20.3.7",
+    "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/xlsx": "^0.0.35",
+    "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
