--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "course-credit-tracker",
+  "name": "student-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:CourseCreditTracker": "node dist/CourseCreditTracker/server/server.mjs"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:4200 cypress:run"
+  },
+  "cypress": {
+    "baseUrl": "http://localhost:4200"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,31 +28,34 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-server": "^20.3.0",
+    "@angular/platform-browser-dynamic": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "@angular/ssr": "^20.3.7",
-    "express": "^5.1.0",
+    "emailjs-com": "^3.2.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.7",
-    "@angular/cli": "^20.3.7",
+    "@angular/build": "^20.3.5",
+    "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.0",
-    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.17.19",
+    "@types/xlsx": "^0.0.35",
+    "cypress": "^15.5.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "start-server-and-test": "^2.1.2",
     "typescript": "~5.9.2"
   }
 }
